manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookclub-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookclub
  template:
    metadata:
      labels:
        app: bookclub
    spec:
      containers:
        - name: bookclub
          image: neakovalaine/bookclub
          ports:
            - containerPort: 3003
