manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookclub-svc
spec:
  selector:
    app: bookclub
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
  type: ClusterIP
